[project]
name = "project-ml-ops"
version = "0.1.0"
description = "MLOps Price Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "db", "ml", "scrapers", "taxonomy", "config"]

